# conductor-main

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  README.pt-BR.md  install.ps1  install.sh  list-commands.md  plano.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  validate.yml
agents/: agile-coach.md  ai-engineer.md  application-security-engineer.md  backend-engineer.md  business-analyst.md  ciso.md  cto.md  data-engineer.md  data-protection-officer.md  data-scientist.md  database-administrator.md  devops-engineer.md  engineering-manager.md  enterprise-architect.md  frontend-engineer.md  fullstack-engineer.md  machine-learning-engineer.md  platform-engineer.md  principal-engineer.md  product-manager.md  product-owner.md  quality-assurance.md  scrum-master.md  sdet.md  security-engineer.md  site-reliability-engineer.md  software-architect.md  software-engineer.md  solutions-architect.md  staff-engineer.md  tech-lead.md  technical-program-manager.md  ui-designer.md  ux-designer.md  ux-researcher.md  vp-engineering.md
cdt/: README.md  __init__.py  honcho_client.py  honcho_setup.py  init.py  journal.py  project.py
commands/: acervo.md  cdt.md  conductor.md  journal.md  library.md
conductor/: __init__.py  cli.py  detect.py  docgen.py  honcho_client.py  honcho_setup.py  honcho_stack.py  install_odysseus.py  journal.py  library.py  mcp_server.py  project.py  roles.py  scaffold.py  update.py  viewer.py
conductor/infra/conductor/: Dockerfile  README.md  docker-compose.gpu.yml  docker-compose.yml
conductor/infra/honcho/: .env.example  README.md  docker-compose.yml  init.sql
conductor/rag/: README.md  bootstrap.py  core.py  ingest.py  stack.py
conductor/targets/: __init__.py  base.py  claude.py  codex.py  odysseus.py  opencode.py  pi.py
conductor/templates/: AGENTS.md.tmpl  CLAUDE.md.tmpl  flow.md
conductor/templates/agents/: backend-engineer.md  business-analyst.md  ciso.md  data-engineer.md  data-protection-officer.md  frontend-engineer.md  fullstack-engineer.md  product-owner.md  scrum-master.md  sdet.md  software-engineer.md  staff-engineer.md  tech-lead.md  ux-researcher.md
conductor/templates/automations/: triage.md
conductor/templates/commands/: cdt.codex.md  cdt.md  cdt.odysseus.md  cdt.opencode.md  cdt.pi.md  intake.md
conductor/templates/e2e/: README.md  playwright.config.ts
conductor/templates/e2e/pages/: login.page.ts
conductor/templates/e2e/tests/: smoke.spec.ts
conductor/templates/skills/automate-tests/: SKILL.md
conductor/templates/skills/build-data-pipeline/: SKILL.md
conductor/templates/skills/build-ui-component/: SKILL.md
conductor/templates/skills/deliver-vertical-feature/: SKILL.md
conductor/templates/skills/implement-feature-tdd/: SKILL.md
conductor/templates/skills/map-enterprise-architecture/: SKILL.md
conductor/templates/skills/map-requirements/: SKILL.md
infra/conductor/: Dockerfile  README.md  docker-compose.gpu.yml  docker-compose.yml
infra/honcho/: .env.example  README.md  docker-compose.yml
infra/mcp/: Dockerfile  README.md  docker-compose.yml
rag/: README.md  __init__.py  bootstrap.py  core.py  ingest.py  query.py  stack.py
skills/agile-diagnosis/: SKILL.md
skills/analise-preditiva/: SKILL.md
skills/assess-privacy/: SKILL.md
skills/automatizar-testes/: SKILL.md
skills/avaliar-privacidade/: SKILL.md
skills/build-cicd-pipeline/: SKILL.md
skills/build-platform-capability/: SKILL.md
skills/conduct-ux-research/: SKILL.md
skills/conduzir-decisao-tecnica/: SKILL.md
skills/conduzir-pesquisa-ux/: SKILL.md
skills/confiabilidade-de-servico/: SKILL.md
skills/construir-capacidade-plataforma/: SKILL.md
skills/construir-componente-ui/: SKILL.md
skills/construir-pipeline-dados/: SKILL.md
skills/criar-interface-visual/: SKILL.md
skills/decide-architecture/: SKILL.md
skills/decidir-arquitetura/: SKILL.md
skills/define-technical-direction/: SKILL.md
skills/definir-direcao-tecnica/: SKILL.md
skills/descoberta-de-produto/: SKILL.md
skills/desenhar-solucao/: SKILL.md
skills/design-llm-system/: SKILL.md
skills/design-service/: SKILL.md
skills/design-solution/: SKILL.md
skills/design-ux-flow/: SKILL.md
skills/design-visual-interface/: SKILL.md
skills/diagnostico-agil/: SKILL.md
skills/diagnostico-de-time/: SKILL.md
skills/drive-technical-decision/: SKILL.md
skills/entregar-feature-vertical/: SKILL.md
skills/escalar-organizacao/: SKILL.md
skills/estrategia-de-testes/: SKILL.md
skills/estrategia-tecnologica/: SKILL.md
skills/facilitar-retro/: SKILL.md
skills/facilitate-retro/: SKILL.md
skills/implementar-feature-tdd/: SKILL.md
skills/lead-technical-initiative/: SKILL.md
skills/liderar-iniciativa-tecnica/: SKILL.md
skills/mapear-arquitetura-corporativa/: SKILL.md
skills/mapear-requisitos/: SKILL.md
skills/model-threats/: SKILL.md
skills/modelar-ameacas/: SKILL.md
skills/montar-pipeline-cicd/: SKILL.md
skills/optimize-database/: SKILL.md
skills/otimizar-banco/: SKILL.md
skills/planejar-programa/: SKILL.md
skills/predictive-analysis/: SKILL.md
skills/product-discovery/: SKILL.md
skills/produtizar-modelo/: SKILL.md
skills/programa-de-seguranca/: SKILL.md
skills/projetar-fluxo-ux/: SKILL.md
skills/projetar-servico/: SKILL.md
skills/projetar-sistema-llm/: SKILL.md
skills/refinar-backlog/: SKILL.md
skills/revisar-seguranca-app/: SKILL.md
skills/scale-organization/: SKILL.md
skills/security-program/: SKILL.md
skills/service-reliability/: SKILL.md
skills/team-diagnosis/: SKILL.md
skills/technology-strategy/: SKILL.md
skills/test-strategy/: SKILL.md
tests/: __init__.py  test_bootstrap.py  test_corpus_selection.py  test_detect_stacks.py  test_e2e_init.py  test_honcho_key_resolution.py  test_ingest_dedup.py  test_library_stacks.py  test_library_status.py  test_project_registry.py  test_scaffold_helpers.py  test_targets.py
tools/: README.md  simulate-install.ps1  simulate-selection.py  test.py  validate.py
(+5 files in other folders)
