[project]
name = "conductor"
version = "0.1.7"
description = "Software-development guidance plugin with 36 roles (Agents + Skills) anchored in reference books."
requires-python = ">=3.9"

# Optional extras: the plugin (agents/skills/commands) works without any deps.
# - rag: semantic search over the library — pip install -e .[rag] + Ollama/bge-m3.
# - honcho: the per-project development diary — pip install -e .[honcho] + the
#   self-hosted Honcho server (see infra/honcho/). The diary's local JSONL mirror
#   works without this extra; Honcho only adds intelligent, meaning-based recall.
[project.optional-dependencies]
rag = ["chromadb>=1.5"]
honcho = ["honcho-ai>=1.0"]
