[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "conductor"
version = "0.2.2"
description = "Global CLI that scaffolds Claude-Code-native config (role Agents + Skills + CLAUDE.md) into any project, with a library RAG and a per-project development diary."
requires-python = ">=3.9"

# Optional extras: the core CLI (scaffolding) works without any deps.
# - rag: semantic search over the library — pip install -e .[rag] + Ollama/bge-m3.
# - honcho: the per-project development diary backend — pip install -e .[honcho]
#   + the self-hosted Honcho server (see infra/honcho/). The diary's local JSONL
#   mirror works without this extra; Honcho only adds meaning-based recall.
[project.optional-dependencies]
rag = ["chromadb>=1.5"]
honcho = ["honcho-ai>=1.0"]

# Global commands: `conductor` (and the `cdt` alias).
[project.scripts]
conductor = "conductor.cli:main"
cdt = "conductor.cli:main"

[tool.setuptools.packages.find]
include = ["conductor*"]

[tool.setuptools.package-data]
conductor = ["templates/**/*"]
