[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "conductor"
version = "0.2.69"
description = "Global CLI that scaffolds Claude-Code-native config (role Agents + Skills + CLAUDE.md) into any project, with a library RAG and a per-project development diary."
requires-python = ">=3.9"

# Optional extras: the core CLI (scaffolding) works without any deps.
# - rag: semantic search over the library — pip install -e .[rag] + Ollama/bge-m3.
# - honcho: the per-project development diary backend — pip install -e .[honcho]
#   + the self-hosted Honcho server (see infra/honcho/). The diary's local JSONL
#   mirror works without this extra; Honcho only adds meaning-based recall.
[project.optional-dependencies]
rag = ["chromadb>=1.5", "scikit-learn>=1.3", "numpy>=1.23"]
honcho = ["honcho-ai>=1.0"]
# mcp: expose the library + journal memories as an MCP stdio server (`cdt mcp`)
# so any MCP-capable harness can call them natively — pip install 'conductor[mcp]'.
mcp = ["mcp>=1.0"]
# docs: render flow specs / client-questions Markdown to .docx deliverables
# (`cdt doc`) deterministically in the CLI — pip install 'conductor[docs]'.
docs = ["python-docx>=1.1", "reportlab>=4.0"]
# dev: local quality tooling (lint + types), mirrored by CI and pre-commit.
dev = ["ruff>=0.15", "mypy>=1.10"]

# Global commands: `conductor` (and the `cdt` alias).
[project.scripts]
conductor = "conductor.cli:main"
cdt = "conductor.cli:main"

[tool.setuptools.packages.find]
include = ["conductor*"]

[tool.setuptools.package-data]
conductor = ["templates/**/*", "infra/**/*"]

# ---------------------------------------------------------------------------
# Lint (ruff) — calibrated to be GREEN on the current tree.
#
# The existing source predates ruff, so this config establishes a baseline that
# catches NEW problems without forcing a mass rewrite of code that already ships.
# Rule set: pyflakes (F) + pycodestyle errors (E) + isort (I).
# Line length is 120 (the code was written to ~120; only 2 lines exceed it).
#
# Pre-existing violations are GRANDFATHERED via per-file-ignores below. Each
# entry is a deliberate, file-scoped exception for code that already shipped;
# NEW files get the full E,F,I rule set. As the grandfathered code is cleaned
# up, the corresponding entries should be removed.
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# Grandfathered pre-existing violations (counts measured at config time):
# E702  semicolon-separated statements — deliberate compact style in detect.py
#       (24) and one test helper (1).
# I001  un-sorted import block — pervasive; predates isort integration (14).
# F401  imported-but-unused (re-exports / future use) (4 across 3 files).
# F541  f-string without placeholders (2).
# F841  assigned-but-never-used local (1).
# E501  line too long (>120) (2).
"conductor/detect.py" = ["E702"]
"conductor/journal.py" = ["F401", "I001"]
"conductor/library.py" = ["F841", "I001"]
"conductor/scaffold.py" = ["I001"]
"conductor/honcho_setup.py" = ["F541"]
"conductor/cli.py" = ["E501"]
"conductor/targets/__init__.py" = ["F401"]
"conductor/targets/base.py" = ["I001"]
"conductor/targets/claude.py" = ["I001"]
"conductor/targets/codex.py" = ["I001"]
"conductor/targets/opencode.py" = ["I001"]
"conductor/targets/pi.py" = ["I001"]
"conductor/rag/bootstrap.py" = ["F401", "F541", "I001"]
"conductor/rag/ingest.py" = ["I001"]
"tools/validate.py" = ["I001"]
"tools/simulate-selection.py" = ["E501"]
"tests/test_targets.py" = ["I001"]
"tests/test_library_stacks.py" = ["E702"]

# ---------------------------------------------------------------------------
# Types (mypy) — intentionally LENIENT so it passes on the current tree.
#
# The codebase has no type annotations yet and uses optional 3rd-party deps
# (chromadb, honcho-ai) behind extras. We start permissive: ignore missing
# imports and do not require annotations. Strictness can be RATCHETED later
# (e.g. disallow_untyped_defs, warn_return_any, per-module strict) once code
# is annotated. CI runs mypy as a hard gate at this lenient level.
#
# python_version is 3.10 (not the project's 3.9 floor): recent mypy releases
# no longer accept 3.9 as an analysis target. This only affects type analysis,
# not the runtime support floor declared in [project].requires-python.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
follow_imports = "silent"
warn_unused_configs = true
# Lenient baseline — no strict flags yet. Ratchet up over time.

# Grandfathered modules with pre-existing type errors that cannot be fixed
# without editing source (out of scope for the tooling baseline). mypy stays a
# hard gate for every OTHER module; remove these overrides as the code is fixed.
[[tool.mypy.overrides]]
module = [
    "conductor.honcho_client",
    "conductor.project",
    "conductor.targets",
    "conductor.rag.core",
    "conductor.rag.bootstrap",
]
ignore_errors = true
